fixed alignments

--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
 body {
   min-height: 100vh;
   background-color: #fff4ef;
+  display: flex;
+  align-items: center;
 }
 
 a {
@@ -22,6 +24,8 @@ img {
 }
 
 #card-list {
+  margin: 0 auto;
+  max-width: 768px;
   padding: 32px;
   gap: 32px;
   display: grid;
